Site v2: Fixed sizing, spacing, tailwind

--- a/tailwind.css
+++ b/tailwind.css
@@ -570,10 +570,6 @@ video {
   position: relative;
 }
 
-.sticky {
-  position: sticky;
-}
-
 .inset-0 {
   inset: 0px;
 }
@@ -604,10 +600,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.top-32 {
-  top: 8rem;
 }
 
 .top-6 {
@@ -643,12 +635,12 @@ video {
   margin-left: -0.25rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.mb-0 {
+  margin-bottom: 0px;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mb-2 {
@@ -675,12 +667,16 @@ video {
   margin-left: 0.25rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
 
-.mt-24 {
-  margin-top: 6rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .block {
@@ -823,8 +819,8 @@ video {
   max-width: 28rem;
 }
 
-.max-w-xl {
-  max-width: 36rem;
+.shrink-0 {
+  flex-shrink: 0;
 }
 
 .-translate-x-2 {
@@ -900,12 +896,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.space-y-12 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3rem * var(--tw-space-y-reverse));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1086,10 +1076,6 @@ video {
   padding: 0.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1148,6 +1134,10 @@ video {
   padding-bottom: 5rem;
 }
 
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
 .pb-32 {
   padding-bottom: 8rem;
 }
@@ -1156,16 +1146,20 @@ video {
   padding-left: 1.5rem;
 }
 
-.pt-12 {
-  padding-top: 3rem;
-}
-
 .pt-16 {
   padding-top: 4rem;
 }
 
 .pt-36 {
   padding-top: 9rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .pt-8 {
@@ -1217,16 +1211,17 @@ video {
   line-height: 1;
 }
 
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
 .text-\[0\.75rem\] {
   font-size: 0.75rem;
 }
 
 .text-\[10px\] {
   font-size: 10px;
-}
-
-.text-\[12px\] {
-  font-size: 12px;
 }
 
 .text-base {
@@ -1278,14 +1273,6 @@ video {
   font-style: italic;
 }
 
-.not-italic {
-  font-style: normal;
-}
-
-.leading-\[0\.85\] {
-  line-height: 0.85;
-}
-
 .leading-none {
   line-height: 1;
 }
@@ -1294,16 +1281,12 @@ video {
   line-height: 1.625;
 }
 
-.leading-tight {
-  line-height: 1.25;
+.tracking-\[0\.1em\] {
+  letter-spacing: 0.1em;
 }
 
 .tracking-\[0\.2em\] {
   letter-spacing: 0.2em;
-}
-
-.tracking-\[0\.3em\] {
-  letter-spacing: 0.3em;
 }
 
 .tracking-\[0\.4em\] {
@@ -1596,18 +1579,8 @@ video {
     align-items: center;
   }
 
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .sm\:text-6xl {
     font-size: 3.75rem;
-    line-height: 1;
-  }
-
-  .sm\:text-7xl {
-    font-size: 4.5rem;
     line-height: 1;
   }
 }
@@ -1629,12 +1602,24 @@ video {
     grid-column: span 4 / span 4;
   }
 
+  .md\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+
+  .md\:col-span-7 {
+    grid-column: span 7 / span 7;
+  }
+
   .md\:col-span-8 {
     grid-column: span 8 / span 8;
   }
 
   .md\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .md\:mb-12 {
+    margin-bottom: 3rem;
   }
 
   .md\:mt-16 {
@@ -1653,16 +1638,16 @@ video {
     display: flex;
   }
 
-  .md\:hidden {
-    display: none;
+  .md\:aspect-\[3\/4\] {
+    aspect-ratio: 3/4;
   }
 
   .md\:aspect-\[4\/5\] {
     aspect-ratio: 4/5;
   }
 
-  .md\:max-w-md {
-    max-width: 28rem;
+  .md\:max-w-full {
+    max-width: 100%;
   }
 
   .md\:grid-cols-12 {
@@ -1681,10 +1666,6 @@ video {
     flex-direction: row;
   }
 
-  .md\:p-12 {
-    padding: 3rem;
-  }
-
   .md\:pt-16 {
     padding-top: 4rem;
   }
@@ -1696,11 +1677,6 @@ video {
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
   }
 
   .md\:text-7xl {
@@ -1715,36 +1691,40 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:sticky {
+    position: sticky;
+  }
+
+  .lg\:top-32 {
+    top: 8rem;
+  }
+
   .lg\:col-span-4 {
     grid-column: span 4 / span 4;
-  }
-
-  .lg\:col-span-5 {
-    grid-column: span 5 / span 5;
-  }
-
-  .lg\:col-span-7 {
-    grid-column: span 7 / span 7;
   }
 
   .lg\:col-span-8 {
     grid-column: span 8 / span 8;
   }
 
-  .lg\:mt-0 {
-    margin-top: 0px;
+  .lg\:flex {
+    display: flex;
   }
 
-  .lg\:aspect-\[3\/4\] {
-    aspect-ratio: 3/4;
+  .lg\:hidden {
+    display: none;
   }
 
-  .lg\:max-w-full {
-    max-width: 100%;
+  .lg\:max-w-xl {
+    max-width: 36rem;
   }
 
   .lg\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:text-8xl {
